--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" className="bg-blue-50">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/cashflowimage.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/CRM Fac.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRM Dashboard</title>
   </head>
